--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,9 +85,8 @@
     </script>
 
     <!-- ✅ Google Maps API を非同期＋defer付きでロード -->
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap&libraries=marker">
-    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&callback=initMap&libraries=marker"></script>
+
 
     <!-- ✅ Turbo対応（Googleロード遅延時も再試行） -->
     <script>
