--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <!-- ✅ TailwindCSS -->
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload", media: "all" %>
     <%= javascript_importmap_tags %>
-    <%= javascript_include_tag "map", Rails.env.production? ? { "data-turbo-track": "reload", defer: true } : { defer: true } %>
+    <%= javascript_include_tag "map", "data-turbo-track": "reload", crossorigin: "anonymous" %>
   </head>
 
   <body class="bg-gray-50 text-gray-800">
