--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 
     <!-- ✅ TailwindCSS -->
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload", media: "all" %>
+    <!-- ✅ Import map module for Google Maps -->
+    <%= javascript_import_module_tag "map" %>
   </head>
 
   <body class="bg-gray-50 text-gray-800">
