--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <!-- ✅ TailwindCSS -->
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload", media: "all" %>
     <!-- ✅ Import map module for Google Maps -->
-    <%= javascript_import_module_tag "map" %>
+    <%= javascript_include_tag "map", "data-turbo-track": "reload" %>
   </head>
 
   <body class="bg-gray-50 text-gray-800">
