--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,12 @@
     <!-- ✅ TailwindCSS -->
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload", media: "all" %>
     <!-- ✅ Import map module for Google Maps -->
-    <%= javascript_include_tag "map.js", "data-turbo-track": "reload" %>
+    <% if Rails.env.production? %>
+  <%= javascript_include_tag "map-3ff8542707f5b496232c8e3533ced28e4ac3091257845c90beffbd7358e01e15.js", "data-turbo-track": "reload" %>
+<% else %>
+  <%= javascript_include_tag "map.js", "data-turbo-track": "reload" %>
+<% end %>
+
   </head>
 
   <body class="bg-gray-50 text-gray-800">
