--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
     <!-- ✅ TailwindCSS -->
     <%= stylesheet_link_tag "tailwind", "data-turbo-track": "reload", media: "all" %>
     <!-- ✅ Import map module for Google Maps -->
-    <%= javascript_include_tag "map.js", "data-turbo-track": "reload" %>
+    <% if Rails.env.production? %>
+  <%= javascript_include_tag "map", "data-turbo-track": "reload" %>
+<% else %>
+  <%= javascript_import_module_tag "map" %>
+<% end %>
   </head>
 
   <body class="bg-gray-50 text-gray-800">
